code cleanup, correct misspells & alts

--- a/aboutus.html
+++ b/aboutus.html
@@ -49,7 +49,7 @@
         <div class="row row-cols-1 row-cols-md-3"> 
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Marcus">
                             <div class="card-body">
                                 <div class="card-title">President - Marcus Lindén</div>
                                 <div class="card-text">Marcus is the current President of Zone031. He is 28 years old and has played laser
@@ -61,7 +61,7 @@
                     </div>  
                         <div class="col mb-4">
                             <div class="card h-100">
-                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Andreas">
                                 <div class="card-body">
                                     <div class="card-title">Treasurer - Andreas Kent</div>
                                     <div class="card-text">Andreas is the long serving treasurer of Zone031. He is 3? years old and has been
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col mb-4">
                             <div class="card h-100">
-                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="">
+                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Paulina">
                                 <div class="card-body">
                                     <div class="card-title">Secretary - Paulina Lager Löfgren</div>
                                     <div class="card-text">Paulina is our current secretary. She is 18 years old and has been playing laser tag
