--- a/feydakin.html
+++ b/feydakin.html
@@ -64,7 +64,7 @@
                 <div class="row row-cols-1 row-cols-md-3"> 
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="image of Mumin">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Mumin (C)</div>
                                 <div class="card-text">If you get too close you are probably done for, on the other hand,
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="image of Bambi">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Bambi</div>
                                 <div class="card-text">He will find you, he will chase you and he will kill you. If you
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="image of Smiley">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Smiley</div>
                                 <div class="card-text">
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/jag.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/jag.jpg" class="card-img-top" alt="image of Gottemaja">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Gottemaja</div>
                                 <div class="card-text">Too skinny to dodge he will disappear behind a wall and reappear where you
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="image of Slaanesh">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Slaanesh</div>
                                 <div class="card-text">The closer you get to him the more he likes it. If you think you got him, you don't.
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/supair.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/supair.jpg" class="card-img-top" alt="image of Supair">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Supair</div>
                                 <div class="card-text">The most unpredictable player in Feydakin's history. When he is in the right mood
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/felix.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/felix.jpg" class="card-img-top" alt="image of Jae Hong">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Jae Hong</div>
                                 <div class="card-text">The way he spins his weapon is so smooth you'd think his wrists can turn 360
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col mb-4"> 
                         <div class="card h-100">
-                            <img src="assets/css/images/skipp.jpg" class="card-img-top" alt="">
+                            <img src="assets/css/images/skipp.jpg" class="card-img-top" alt="image of Skipp">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Skipp</div>
                                 <div class="card-text">He claimed to have retired from lasertag, still he suddenly reappears in the dark 
