--- a/media.html
+++ b/media.html
@@ -41,28 +41,28 @@
             <div class="col-md-6">
                 <h2>Twitch</h2> 
                     <p>Regular live streams from our training sessions see more at our <a class="hyperlink" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
-                <iframe id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" autoplay="false" scrolling="no" height="378" width="620"></iframe>
+                <iframe title="training video" id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" allowautoplay="false" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-6">
              <h2>Facebook</h2>
              <p>On occassion we livestream via mobile phones directly from inside of the arena. These films are the most intimate laser tag experience
              you can get without actually being inside the arena. You can find all of these videos on our <a class="hyperlink" href="https://www.facebook.com/Zone031/videos/?ref=page_internal">facebook page</a>
              </p>
-                <iframe id="facebook-media" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F255647752334203%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" allowfullscreen="true"></iframe>
+                <iframe title="training video" id="facebook-media" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F255647752334203%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" allowfullscreen="true"></iframe>
             </div>
             <div class="col-md-6">
                 <h2>Youtube</h2>
                 <p>On <a class="hyperlink" href="https://www.youtube.com/channel/UCwTSZl2vJs5-fOfiNRlH26Q">Youtube</a> you can see a lot of films from training sessions at our old arena at Grafiska Vägen.</p>
-                <iframe id="youtube-media" width="560" height="315" src="https://www.youtube.com/embed/D72KsRNZsF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe title="training video" id="youtube-media" width="560" height="315" src="https://www.youtube.com/embed/D72KsRNZsF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-md-6">
                 <h2>The Hisingen Arena</h2>
                 <div class="sketchfab-embed-wrapper">
                     <iframe id="sketchfab-media" title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/d0f13e02648c4fc7bc82e44eb1ea092a/embed?autostart=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                         <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                        <a href="https://sketchfab.com/3d-models/laserdome-hisingen-d0f13e02648c4fc7bc82e44eb1ea092a?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Laserdome Hisingen</a>
-                        by <a href="https://sketchfab.com/SmiLeY?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">SmiLeY</a>
-                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                        <a href="https://sketchfab.com/3d-models/laserdome-hisingen-d0f13e02648c4fc7bc82e44eb1ea092a?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Laserdome Hisingen</a>
+                        by <a href="https://sketchfab.com/SmiLeY?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">SmiLeY</a>
+                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
                         </p>
                 </div>
             </div>
