--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
     <link type="text/css" rel="stylesheet" href="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.css"/>
     <title>Zone031</title>
 </head>
@@ -28,7 +27,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
                             <a href="feydakin.html" class="dropdown-item">Feydakin</a>
                             <a href="piraya.html" class="dropdown-item">Piraya</a>
@@ -54,40 +53,20 @@
                 </p>
             </div>
             <div class="follow-icons"> 
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
+                <a href="https://www.facebook.com/Zone031/" rel="noreferrer" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
+                <a href="https://www.twitch.tv/lasertaggothenburg" rel="noreferrer" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
+                <a href="https://www.instagram.com/zone031/" rel="noreferrer" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
             </div>
         </div>
         <div class="col-md-6">
             <h3>Inside the Hisingen arena</h3>
-            <!-- do not <p class="imglist">
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
-            <img src="assets/css/images/arena-hole_tn.jpg">
-            </a>
-            </p> -->
             <div class="MagicScroll" data-options="mode: carousel; height: 350px;">
-                <img src="assets/css/images/arena-hole.png" />
-                <img src="assets/css/images/arena-hole.png" />
-                <img src="assets/css/images/arena-hole.png" />
-                <img src="assets/css/images/arena-hole.png" />
-                <img src="assets/css/images/arena-hole.png" />
-                <img src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
             </div>
         </div>
         <div class="col-md-6 form-div">
@@ -111,15 +90,13 @@
         </div>
         <div class="col-md-6">
             <h3>Baserun training!</h3>
-            <iframe class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+            <iframe title="training video" class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
         </div>
     
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.js"></script>
 </body>
 </html>
