fix twitch autoplay, add images to carousel

--- a/index.html
+++ b/index.html
@@ -62,11 +62,17 @@
             <h3>Inside the Hisingen arena</h3>
             <div class="MagicScroll" data-options="mode: carousel; height: 350px;">
                 <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0131.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0132.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0133.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0134.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0136.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0137.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0139.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0140.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0141.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0142.JPG" />
+                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0143.JPG" />
             </div>
         </div>
         <div class="col-md-6 form-div">
