--- a/media.html
+++ b/media.html
@@ -41,7 +41,7 @@
             <div class="col-md-6">
                 <h2>Twitch</h2> 
                     <p>Regular live streams from our training sessions see more at our <a class="hyperlink" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
-                <iframe title="training video" id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" allowautoplay="false" scrolling="no" height="378" width="620"></iframe>
+                <iframe title="training video" id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-6">
              <h2>Facebook</h2>
