--- a/tournaments.html
+++ b/tournaments.html
@@ -98,7 +98,7 @@
         </div>
     </section>
     <section>
-    <div class="container-fluid row">
+    <div class="container-fluid row double-tour">
         <div class="col-md-12">
             <h3>Double Trouble</h3>
             <p>
