grammar fix & text add in feydakin

--- a/feydakin.html
+++ b/feydakin.html
@@ -67,8 +67,9 @@
                             <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="image of Mumin">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Mumin (C)</div>
-                                <div class="card-text">If you get too close you are probably done for, on the other hand,
-                                if you try to stay away you will soon find your escape route cut off. You may as well try
+                                <div class="card-text">
+                                If you get too close you are probably done for, on the other hand,
+                                if you try to get away you will soon find your escape route cut off. You may as well try
                                 and die.
                                 </div>
                             </div>
@@ -79,9 +80,10 @@
                             <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="image of Bambi">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Bambi</div>
-                                <div class="card-text">He will find you, he will chase you and he will kill you. If you
+                                <div class="card-text">
+                                He will find you, he will chase you and he will kill you. If you
                                 think that he is too busy and that you will be able to get away you are mistaken. Did we mention
-                                that he will chase you down?
+                                that he will chase you down if you run?
                                 </div>
                             </div>
                         </div>  
@@ -93,7 +95,7 @@
                                 <div class="card-title fey-plname">Smiley</div>
                                 <div class="card-text">
                                 As rarely captured on photographs as he is seen inside of the arena. If you died and you don't know
-                                from where it was Smiley. He is tracking you and your friends.
+                                from where, it was Smiley. He is tracking you and your friends and you don't even know it.
                                 </div>
                             </div>
                         </div>  
@@ -126,7 +128,7 @@
                             <div class="card-body">
                                 <div class="card-title fey-plname">Supair</div>
                                 <div class="card-text">The most unpredictable player in Feydakin's history. When he is in the right mood
-                                he will tear through anything.</div>
+                                he will tear through anything like a sandstorm.</div>
                             </div>
                         </div>  
                     </div>
