twitch-auto-fix again, misspell & padding fixes

--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
                             <a href="feydakin.html" class="dropdown-item">Feydakin</a>
                             <a href="piraya.html" class="dropdown-item">Piraya</a>
@@ -43,7 +43,8 @@
         regular training activities on Tuesdays, Thursdays and Sundays starting from 18:45. We have decades and decades of 
         lasertag experience put together and are dedicated to introducing the sport to new players. If you are interested in
         trying out competetive laser tag, do not hesitate to contact us. The easiest way to do that is to send us a message
-        on <a href="https://www.facebook.com/Zone031" target="_blank" class="hyperlink">facebook!</a>  
+        on <a href="https://www.facebook.com/Zone031" rel="noreferrer" target="_blank" class="hyperlink">facebook!</a> You 
+        can also send Marcus an email at: gottemaja@gmail.com  
         </p>
         <h3>Current committee</h3>
         <div class="row row-cols-1 row-cols-md-3"> 
@@ -76,8 +77,8 @@
                                 <div class="card-body">
                                     <div class="card-title">Secretary - Paulina Lager Löfgren</div>
                                     <div class="card-text">Paulina is our current secretary. She is 18 years old and has been playing laser tag
-                                    for just couple of years. She is very dedicated to the sport. She also does a lot of Zone031's social media 
-                                    work.</div>
+                                    for just couple of years and is already very dedicated to the sport. She also does a lot of Zone031's social media 
+                                    work and has taken most of the images on the page.</div>
                                 </div>
                             </div> 
                         </div>
