--- a/tournaments.html
+++ b/tournaments.html
@@ -26,7 +26,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link you-are-here">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
                             <a href="feydakin.html" class="dropdown-item">Feydakin</a>
                             <a href="piraya.html" class="dropdown-item">Piraya</a>
@@ -93,7 +93,7 @@
             </div>
             <div class="col-md-6">
                 <h4>Sunday elimination and team comp finals</h4>
-                <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
         </div>
     </section>
@@ -108,11 +108,11 @@
         </div>
         <div class="col-md-6">
             <h4>Day 1 of tournament</h4>
-            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" autostart="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
         <div class="col-md-6">
             <h4>Day 2 of tournament</h4>
-            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
     </div>
     </section>
