--- a/feydakin.html
+++ b/feydakin.html
@@ -26,7 +26,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle you-are-here" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle you-are-here" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
                             <a href="feydakin.html" class="dropdown-item you-are-here">Feydakin</a>
                             <a href="piraya.html" class="dropdown-item">Piraya</a>
@@ -155,12 +155,6 @@
                         </div>  
                     </div>
                 </div>     
-        </section>
-        <section>
-            <h2>History</h2>
-            <p>
-                Stuff. A lot of stuff.
-             </p>
         </section>
     </main>
     <footer>
