--- a/media.html
+++ b/media.html
@@ -26,7 +26,7 @@
                     <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link you-are-here">Media</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
                     <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-hashpopup="true" aria-expanded="false">Teams</a>
+                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
                         <div class="dropdown-menu">
                             <a href="feydakin.html" class="dropdown-item">Feydakin</a>
                             <a href="piraya.html" class="dropdown-item">Piraya</a>
@@ -37,7 +37,7 @@
             </div>
         </section>
     </header>
-    <div class="container-fluid row">
+    <div class="container-fluid row media-container">
             <div class="col-md-6">
                 <h2>Twitch</h2> 
                     <p>Regular live streams from our training sessions see more at our <a class="hyperlink" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
