--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                     you will encounter all levels of opposition while at the same time getting tips 
                     from some of the best lasertag players in Europe.
                     </p>
-                    <form>
+                    <form action="https://formdump.codeinstitute.net/" method="POST">
                         <div class="signup-form">
-                            <input type="name" placeholder="Forename Surname" aria-label="input for name">
-                            <input type="email" placeholder="name@email.xyz" aria-label="input for email">
+                            <input type="name" name="name" placeholder="Forename Surname" aria-label="input for name" required="required">
+                            <input type="email" name="email" placeholder="name@email.xyz" aria-label="input for email" required="required">
                             <button type="submit">Submit</button>
                         </div>
                     </form>
